<?xml version="1.0"?>
<package format="2">
  <name>hebiros_utils</name>
  <version>0.1.0</version>
  <description>The hebiros_utils package</description>

  <maintainer email="jcoombe@metamorphsoftware.com">Joseph Coombe</maintainer>

  <license>MIT</license>

  <url type="website">https://www.metamorphsoftware.com/</url>

  <author email="jcoombe@metamorphsoftware.com">Joseph Coombe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>hebiros</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>hebiros</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>hebiros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
